--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <body>
 <style>
-body {
-  background: red;
+  body {
+    background: red;
 }
+  * {
+    font-family: arial;
+  }
 </style>
 </body>
