--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<body>
-<style>
-  body {
-    background: red;
-}
-  * {
-    font-family: arial;
-  }
-</style>
-</body>
+
+<div class="container">
+    <div class="row clearfix" style="padding: 0px; margin: 0px -15px; background-color: rgba(0, 0, 0, 0);">
+        <div class="col-md-12" style="padding: 39px 19px 24px; margin: 0px; background-color: rgba(0, 0, 0, 0);">
+            <center id="a955-ac92-3136-d96b">
+                <h1>
+                    the349
+                </h1>
+                <img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100">
+            </center>
+            <hr id="a955-ac92-3136-d96b">
+        </div>
+    </div>
+    <div class="row clearfix" style="padding: 0px; margin: 0px -15px; background-color: rgba(0, 0, 0, 0);">
+        <div class="col-md-12" style="padding: 39px 19px 24px; margin: 0px; background-color: rgba(0, 0, 0, 0);">
+            <p>
+                Hi the349 here and welcome to my website. check out my GitHub&nbsp;page&nbsp;
+                <a href="http://github.com/the349">
+                    here
+                </a>
+                .
+            </p>
+        </div>
+    </div>
+</div>
