--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <div class="row clearfix" style="padding: 0px; margin: 0px -15px; background-color: rgba(0, 0, 0, 0);">
+    <div class="row clearfix" style="padding: 0px; margin: 0px; background-color: rgba(0, 0, 0, 0);">
         <div class="col-md-12" style="padding: 39px 19px 24px; margin: 0px; background-color: rgba(0, 0, 0, 0);">
             <center id="a955-ac92-3136-d96b">
                 <h1>
@@ -11,7 +11,7 @@
             <hr id="a955-ac92-3136-d96b">
         </div>
     </div>
-    <div class="row clearfix" style="padding: 0px; margin: 0px -15px; background-color: rgba(0, 0, 0, 0);">
+    <div class="row clearfix" style="padding: 0px; margin: 0px; background-color: rgba(0, 0, 0, 0);">
         <div class="col-md-12" style="padding: 39px 19px 24px; margin: 0px; background-color: rgba(0, 0, 0, 0);">
             <p>
                 Hi the349 here and welcome to my website. check out my GitHub&nbsp;page&nbsp;
