--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4">
-<h1>
-    The349
-</h1>
+<center>
+    <h1>
+        The349
+    </h1>
+    <img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;">
+</center>
 <hr>
