--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
+<script>$('.caris').slick();</script>
