--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <div><span>More coming soon</span></div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
-<script>$('.caris').slick();</script>
+<script>$('.caris').slick("slickAdd", "<div><img src='https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4' width='100' height='100' style='border-radius:10px;'></div>
+');</script>
