--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
 </center>
 <hr>
 <div class="caris">
-    <div><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;"></div>
-    <div><span>More coming soon</span></div>
+    <div class="caris1"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;"></div>
+    <div class="caris2"><span>More coming soon</span></div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
-<script>$('.caris').slick("slickAdd", "<div><img src='https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4' width='100' height='100' style='border-radius:10px;'></div>
-');</script>
+<script>
+    function caris1() {
+        $('.caris2').css("display", "none")
+        $('.caris1').css("display", "block")
+    }
+    function caris2() {
+        $('.caris1').css("display", "none")
+        $('.caris2').css("display", "block")
+    }
+    function caris() {
+        setTimeout(caris1, 3000)
+        setTimeout(caris2, 3000)
+    }
+    setInterval(caris, 6001)
+</script>
