--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;">
 </center>
 <hr>
-<div class="caris">
-    <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;"></div>
-    <div class="carisSl"><span>More coming soon</span></div>
-</div>
+<center>
+    <div class="caris">
+        <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" style="border-radius:10px;"></div>
+        <div class="carisSl"><span>More coming soon</span></div>
+    </div>
+</center>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script>
 var myIndex = 0;
