--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <hr>
 <center>
     <div class="caris">
-        <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" style="border-radius:10px;"></div>
+        <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" style="border-radius:10px;"></div>
         <div class="carisSl"><span>More coming soon</span></div>
     </div>
 </center>
