--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
+<style>* {font-family:arial;}</style>
 <center>
     <h1 style="font-family:arial;">
         The349
@@ -7,9 +8,9 @@
 </center>
 <hr>
 <center>
-    <div class="caris">
-        <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" style="border-radius:10px;"></div>
-        <div class="carisSl"><span>More coming soon</span></div>
+    <div class="caris" style="height:50%;width:100%;">
+        <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="50%" style="border-radius:10px;"></div>
+        <div class="carisSl" style="background:url(https://cdn.pixabay.com/photo/2016/07/12/19/51/colors-1512911_960_720.png)"><span><h1>More coming soon</h1></span></div>
     </div>
 </center>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
