--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;">
 </center>
 <hr>
-<center>
-    <div class="caris" style="height:50%;width:100%;">
+<center style="height:50%;width:100%;">
+    <div class="caris" style="height:100%;width:100%;">
         <div class="carisSl"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="50%" style="border-radius:10px;"></div>
         <div class="carisSl" style="background:url(https://cdn.pixabay.com/photo/2016/07/12/19/51/colors-1512911_960_720.png)"><span><h1>More coming soon</h1></span></div>
     </div>
