--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <hr>
 <center style="height:50%;width:100%;">
     <div class="caris" style="height:100%;width:100%;">
-        <div class="carisSl" style="height:50%;"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="50%" style="border-radius:10px;"></div>
+        <div class="carisSl" style="height:50%;"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" style="border-radius:10px;"></div>
         <div class="carisSl" style="background:url(https://cdn.pixabay.com/photo/2016/07/12/19/51/colors-1512911_960_720.png);height:50%;"><span><h1>More coming soon</h1></span></div>
     </div>
+</center>e
+<hr>
+<center>
+    <h1>Hi from The349</h1>
+    <br>
+    <p>
+        Hello this is The349. I am a front-ent developer. Also do you like my new website click <a href="javascript:alert('Thanks!')">here</a> if you do
+    </p>
 </center>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script>
