--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <center style="height:50%;width:100%;">
     <div class="caris" style="height:100%;width:100%;">
         <div class="carisSl" style="height:50%;"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" style="border-radius:10px;"></div>
-        <div class="carisSl" style="background:url(https://cdn.pixabay.com/photo/2016/07/12/19/51/colors-1512911_960_720.png);height:50%;"><span><h1>More coming soon</h1></span></div>
+        <div class="carisSl" style="background:url(https://cdn.pixabay.com/photo/2016/07/12/19/51/colors-1512911_960_720.png);height:100%;"><span><h1>More coming soon</h1></span></div>
     </div>
-</center>e
+</center>
 <hr>
 <center>
     <h1>Hi from The349</h1>
