--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
-<style>* {font-family:arial;} .carisSl {transition: visibility .7s ease-in-out;}</style>
+<style>* {font-family:arial;}</style>
 <center>
     <h1 style="font-family:arial;">
         The349
@@ -30,11 +30,11 @@ function carousel() {
     var i;
     var x = document.getElementsByClassName("carisSl");
     for (i = 0; i < x.length; i++) {
-       x[i].style.visivility = "hidden";
+       x[i].style.display = "none";
     }
     myIndex++;
     if (myIndex > x.length) {myIndex = 1}
-    x[myIndex-1].style.visibility = "visible";
+    x[myIndex-1].style.display = "block";
     setTimeout(carousel, 3000);
 }
 </script>
