--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>The349</title>
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
 <style>* {font-family:arial;}</style>
 <center>
