--- a/index.html
+++ b/index.html
@@ -1,41 +1,3 @@
-<title>The349</title>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
-<style>* {font-family:arial;}</style>
-<center>
-    <h1 style="font-family:arial;">
-        The349
-    </h1>
-    <img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" width="100" height="100" style="border-radius:10px;">
-</center>
-<hr>
-<center style="height:50%;width:100%;">
-    <div class="caris" style="height:100%;width:100%;">
-        <div class="carisSl" style="height:50%;"><img src="https://avatars2.githubusercontent.com/u/29069199?s=460&amp;v=4" style="border-radius:10px;"></div>
-        <div class="carisSl" style="background:url(https://cdn.pixabay.com/photo/2016/07/12/19/51/colors-1512911_960_720.png);height:100%;"><span><h1>More coming soon</h1></span></div>
-    </div>
-</center>
-<hr>
-<center>
-    <h1>Hi from The349</h1>
-    <br>
-    <p>
-        Hello this is The349. I am a front-ent developer. Also do you like my new website click <a href="javascript:alert('Thanks!')">here</a> if you do
-    </p>
-</center>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script>
-var myIndex = 0;
-carousel();
-
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("carisSl");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}
-    x[myIndex-1].style.display = "block";
-    setTimeout(carousel, 3000);
-}
+    location.href = "http://mrjay.oyosite.com"
 </script>
