--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<script>
-    location.href = "http://mrjay.oyosite.com"
-</script>
+<style>body {margin:0px;}</style>
+<iframe src="http://the349.oyosite.com" height="100%" width="100%" frameborder="0" allowfullscreen></iframe>
