--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
     <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;}</style>
 </head>
-<body style="background-color: rgb(81, 86, 89);">
+<body>
 	<div id="page">
         <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand text-light" onclick="openMenu()">
@@ -23,7 +23,7 @@
             <h1>Uh Oh</h1>
             <h2>Looks like you went to the wrong place</h2>
             <hr>
-            <p>You can report that <a href="http://github.com/the349/the349.github.io/issues">here</a> or <a href="http://the349.github.io">go back home</a>
+            <p>You can report that <a href="http://github.com/the349/the349.github.io/issues">here</a> or <a href="http://the349.github.io">go back home</a></p>
         </div>
 	</div><!--Core js-->
     <!-- development version, includes helpful console warnings -->
