--- a/404.html
+++ b/404.html
@@ -39,5 +39,7 @@
 	</script> 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js">
 	</script>
+	<script src="https://the349.oyosite.com/newsite/40/main.js">
+	</script>
 </body>
 </html>
