--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content="index, follow" name="robots">
 	<meta content="The349" name="author">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href="http://the349.oyosite.com/mylogo.png" rel="shortcut icon">
+	<link href="https://the349.oyosite.com/mylogo.png" rel="shortcut icon">
   <style>body {margin:0px;}</style>
   </head>
 <iframe src="https://the349.oyosite.com/newsite/40/index.html" height="100%" width="100%" frameborder="0" allowfullscreen></iframe>
