--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
             <h1>Uh Oh</h1>
             <h2>Looks like you went to the wrong place</h2>
             <hr>
-            <p>You can report that <a href="http://github.com/the349/the349.github.io/issues">here</a> or <a href="http://the349.github.io">go back home</a></p>
+            <p>You can report that <a href="http://github.com/the349/the349.github.io/issues">here</a> or <a href="index.html">go back home</a></p>
         </div>
 	</div><!--Core js-->
     <!-- development version, includes helpful console warnings -->
