--- a/art/odd1sout.html
+++ b/art/odd1sout.html
@@ -9,7 +9,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="https://the349.oyosite.com/mylogo.png" rel="shortcut icon">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;}</style>
+    <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;} #page {padding:50px}</style>
 </head>
 <body>
 	<div id="page">
