--- a/art/odd1sout.html
+++ b/art/odd1sout.html
@@ -9,7 +9,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="https://the349.oyosite.com/mylogo.png" rel="shortcut icon">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;} #page {padding:50px}</style>
+    <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;}</style>
 </head>
 <body>
 	<div id="page">
@@ -18,9 +18,10 @@
                 <img src="https://the349.oyosite.com/mylogo.png" width="33">
                 The349
             </a>
-        </nav>
+        </nav><div style="padding:50px;">
 		<h1>Theodd1sout</h1>
         <img src="images/theodd1sout.jpeg" width="70%">
+		</div>
 	</div><!--Core js-->
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js">
