--- a/index.html
+++ b/index.html
@@ -10,3 +10,6 @@
   <style>body {margin:0px;}</style>
   </head>
 <iframe src="https://the349.oyosite.com/newsite/40/index.html" height="100%" width="100%" frameborder="0" allowfullscreen></iframe>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5988a13c19ad15f3">
+</script>
+</html>
