--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</script>
     <script src="jquary.smoothstate.js">
     </script>
-    <script src="main.js">
+    <script src="js/main.js">
     </script>
 </body>
 </html>
