--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 	</script> 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js">
 	</script>
-    <script src="jquary.smoothstate.js">
+    <script src="js/jquary.smoothstate.js">
     </script>
-    <script src="js/main.js">
+    <script src="main.js">
     </script>
 </body>
 </html>
