--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	<div id="page" class="animated">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand text-light" onclick="openMenu()">
-                <img src="../../mylogo.png" width="80">
+                <img src="https://the349.oyosite.com/mylogo.png" width="80">
             </a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a href="./" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://the349.github.io/blog" class="nav-link" target="_blank">Blog</a>
+                    <a href="blog" class="nav-link">Blog</a>
                 </li>
             </ul>
         </nav>
