--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<script type="application/ld+json">
 	      {"@context": "http://schema.org/","@type": "Person","name": "The349","jobTitle": "Developer"}
 	</script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js">
 	</script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js">
 	</script> 
