--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta content="index, follow" name="robots">
 	<meta content="The349" name="author">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href="../../mylogo.png" rel="shortcut icon">
+	<link href=""https://the349.oyosite.com/mylogo.png" rel="shortcut icon">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
     <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;}</style>
