--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="./" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="blog" class="nav-link">Blog</a>
+                    <a href="blog/index.html" class="nav-link">Blog</a>
                 </li>
             </ul>
         </nav>
