--- a/index.html
+++ b/index.html
@@ -1,103 +1,54 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>The349</title>
-	<meta content="The349's website" name="description">
-	<meta content="index, follow" name="robots">
-	<meta content="The349" name="author">
-	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href=""https://the349.oyosite.com/mylogo.png" rel="shortcut icon">
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
-    <style>h1, .lead {background-image: linear-gradient(to bottom right, #FFB948, #FF43AD, #A732FF);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}*::selection {background:red;color:white;}</style>
-</head>
-<body style="background-color: rgb(81, 86, 89);overflow-x:hidden;">
-	<div id="page" class="animated">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand text-light" onclick="openMenu()">
-                <img src="https://the349.oyosite.com/mylogo.png" width="80">
+    <head>
+        <meta charset="utf-8">
+        <title>The349</title>
+        <meta name="description" content="The349's website">
+        <meta name="robots" content="index, follow">
+        <meta name="author" content="The349">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="https://the349.oyosite.com/mylogo.png" />
+        <meta http-equiv="Expires" content="30" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+        <style>.card{height:300px;width:300px;border-radius:10px;color:#e2e2e2;background-size:cover;display:inline-block;margin:2px;background-position:center;transition:all 1s ease-in-out;}.card-title {margin-left:20px;}.card-content{margin-left:20px;}#search{display:none;padding:5px;text-align:center;width:100%;height:100%;position:fixed;top:0;left:0;}#search:target{display:block;background:white;}</style>
+    </head>
+    <body>
+        <nav class="navbar navbar-dark" style="background:var(--purple)">
+            <a class="navbar-brand" href="#">
+                <img src="https://the349.oyosite.com/mylogo.png" width="30" height="30" alt="">
+                The349
             </a>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a href="./" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="blog/index.html" class="nav-link">Blog</a>
-                </li>
-            </ul>
+            <input type="search" name="mySearch" placeholder="Search..." style="
+    border-image: url('https://the349.oyosite.com/mylogo.png');
+    border-width: 3px;
+    border-radius: 5px;
+" onchange="location.href = '?q=' + this.value + '#search'">
         </nav>
-		<div class="carousel slide" data-ride="carousel" id="mainCarousel">
-			<ol class="carousel-indicators">
-				<li class="active" data-slide-to="0" data-target="#mainCarousel"></li>
-				<li data-slide-to="1" data-target="#mainCarousel"></li>
-				<li data-slide-to="2" data-target="#mainCarousel"></li>
-			</ol>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img alt="First slide" class="d-block w-100" height="100%" src="https://github.com/the349/pizLinux/blob/master/background2.png?raw=true" width="100%">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Welcome</h5>
-						<p>Welcome to my website</p>
-					</div>
-				</div>
-				<div class="carousel-item"><img alt="Second slide" class="d-block w-100" src="https://via.placeholder.com/3840x2160" width="100%">
-                    <div class="carousel-caption d-none d-md-block">
-						<h5>No post</h5>
-						<p>There is no post here</p>
-					</div>
-                </div>
-				<div class="carousel-item"><img alt="Third slide" class="d-block w-100" src="https://via.placeholder.com/3840x2160">
-                    <div class="carousel-caption d-none d-md-block">
-						<h5>No post</h5>
-						<p>There is no post here</p>
-					</div>
-                </div>
-			</div><a class="carousel-control-prev" data-slide="prev" href="#mainCarousel" role="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" data-slide="next" href="#mainCarousel" role="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
-		</div>
-        <div class="jumbotron" style="border-radius:0px;">
-            <h1 class="display-1">
-                Hi
+        <div id="page-content">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScGxc5F8jw3sKFo-lnWJZ0A5cBhNEiTD5K5uWwYQ_1_dTAdyw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+        <div id="search" class="animated flipInX">
+            <h1>
+                Search
             </h1>
-            <p class="lead">
-                HI, my name is The349 aka Joe and I am a software developer.
-            </p>
+            <input type="search" name="mySearch" placeholder="Search..." style="
+    border-image: url('https://the349.oyosite.com/mylogo.png');
+    border-width: 3px;
+    border-radius: 5px;
+    width:80%;
+    height:3rem;
+" onchange="location.href = '?q=' + this.value + '#search'">
+            <br>
+            <a href="javascript: location.href = location.origin + location.pathname">Back</a>
         </div>
-        <div id="blog-embed" style="background:rgb(212, 187, 157);padding-top:16px;padding-left:8px;padding-right:8px;padding-bottom:16px;">
-            <center><div class="card" style="width:18rem;" id="blog-item" v-for="item in items">
-                <div v-html="item.blogHead">
-                    
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">
-                        {{ item.blogTitle }}
-                    </h5>
-                    <p class="card-text">
-                        {{ item.blogText }}
-                    </p>
-                </div>
-            </div></center>
-        </div>
-        <div id="footer" include-html="footer.html">
-            
-        </div>
-	</div>
-    <audio loop id="music" autoplay></audio><!--Core js-->
-    <!-- development version, includes helpful console warnings -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js">
-    </script> 
-	<script type="application/ld+json">
-	      {"@context": "http://schema.org/","@type": "Person","name": "The349","jobTitle": "Developer"}
-	</script>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js">
-	</script> 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js">
-	</script> 
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js">
-	</script>
-    <script src="js/jquary.smoothstate.js">
-    </script>
-    <script src="main.js">
-    </script>
-</body>
+        <script type=application/ld+json>{"@context":"http://schema.org/","@type":"Person","name":"The349","jobTitle":"Developer","address":{"@type":"PostalAddress","addressLocality":"","addressRegion":""}}</script>  
+        <script>var loadDeferredStyles=function(){var addStylesNode=document.getElementById("deferred-styles");var replacement=document.createElement("div");replacement.innerHTML=addStylesNode.textContent;document.body.appendChild(replacement) addStylesNode.parentElement.removeChild(addStylesNode);};var raf=window.requestAnimationFrame||window.mozRequestAnimationFrame||window.webkitRequestAnimationFrame||window.msRequestAnimationFrame;if(raf)raf(function(){window.setTimeout(loadDeferredStyles,0);});else window.addEventListener('load',loadDeferredStyles);</script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script>fetch("https://the349.github.io/feed.json").then(data => {data.json().then(data => {feed = data})}).then(() => {
+    for(var i = 0;i < feed.posts.length;i++) {
+        $('#page-content').html("<div class='card' id="+ i +" style='background:url(" + feed.posts[i].blogImage + "'><h3 class='card-title'>"+ feed.posts[i].blogTitle +"</h3><p class='card-content'>"+ feed.posts[i].blogText +"</p></div>" + $('#page-content').html())
+    }
+})</script>
+    </body>
 </html>
